# embeddingexplorations

./: .gitignore  CLAUDE.md  README.md  epics.txt  evolvattention.txt  ideas.txt  pyproject.toml
pjpd/: tasks.txt
resources/public/: README.md  index.css  index.html  index.js
src/evolvattention/: README.md  SPEC.md  __init__.py  server.py
src/evolvattention/evolve/: __init__.py  evolution.py
src/evolvattention/vecx/: vecbook_index.py
tests/: test_evolution_fix.py  test_server.py  test_target_mode.py  test_web_interface.py
tests/evolvattention/: test_evolution.py
tests_slow/: test_vecbook_integration.py
